# ai-plays-slay-the-spire

./: .gitignore  .gitmodules  AGENTS.md  README.md  package.json  pnpm-lock.yaml  pyproject.toml
.work/: .gitignore
.work/codex/: .gitignore  config.toml
.work/codex/skills/: .gitignore
.work/codex/skills/slay-the-spire-mod-api/: SKILL.md
.work/codex/skills/slay-the-spire-mod-api/agents/: openai.yaml
.work/codex/skills/slay-the-spire-mod-api/references/: mod-api-guide-ko.md
.work/codex/skills/use-sts-cli/: SKILL.md
.work/codex/skills/use-sts-cli/agents/: openai.yaml
.work/codex/skills/use-sts-cli/references/: cli-reference.md
agent/: .gitignore  AGENTS.md  MEMORY.md  compact_combat_summary.sh  enhancement_requests.md
agent/.codex/: hooks.json
agent/helpers/: __init__.py  sts.py  test_sts.py
agent/hooks/: stop.py
agent/scripts/: sts-combat-summary.sh  sts-state-latest.sh  sts-summary.sh
scripts/: agent.sh  bridge.sh  build_mod.sh  checkout.sh  run.sh
src/ai_plays_slay_the_spire/: __main__.py  _app.py  app.py  codex.py  codex_common.py  codex_executor.py  codex_process.py  codex_reader.py  codex_writer.py  game.py  game_message_reader.py  game_message_writer.py  game_reader.py  game_writer.py  log.py  message_reader.py  message_reader_thread.py  paths.py
src/app/: __main__.py  input_receiver.py  log.py  paths.py
