[project]
name = "ai-plays-slay-the-spire"
version = "0.0.0"
description = "AI plays Slay the Spire"
readme = "README.md"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.5",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.pyright]
typeCheckingMode = "strict"
reportImplicitOverride = true
include = [
    "packages/*/src",
    "packages/*/tests",
]

[tool.pytest.ini_options]
addopts = "--cov --cov-report=term-missing"

[tool.coverage.run]
source = [
    "packages/ai/src/ai",
    "packages/bridge/src/bridge",
    "packages/core/src/core",
]

[tool.ruff]
target-version = "py311"
include = [
    "packages/*/src/**/*.py",
    "packages/*/tests/**/*.py",
    "pyproject.toml",
    "packages/*/pyproject.toml",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "EM101", "EM102", "TRY003"]

[tool.ruff.lint.per-file-ignores]
"packages/*/tests/**/*.py" = ["INP001", "S101"]
