[project]
name = "ai-plays-slay-the-spire"
version = "0.0.0"
description = "AI plays Slay the Spire"
readme = "README.md"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.5",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.pyright]
typeCheckingMode = "strict"
reportImplicitOverride = true
include = ["packages/*/src/**/*.py", "packages/*/tests/**/*.py"]

[tool.pytest.ini_options]
addopts = "--cov --cov-report=term-missing"

[tool.coverage.run]
source = [
    "packages/ai/src/ai",
    "packages/bridge/src/bridge",
    "packages/core/src/core",
]

[tool.ruff]
target-version = "py312"
include = [
    "packages/*/src/**/*.py",
    "packages/*/tests/**/*.py",
    "pyproject.toml",
    "packages/*/pyproject.toml",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "COM819", "D", "EM101", "EM102", "TRY003"]

[tool.ruff.lint.per-file-ignores]
"packages/*/tests/**/*.py" = ["INP001", "S101"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"unittest".msg = "unittest대신 pytest를 사용하고, unittest.mock대신 의존성 주입으로 테스트합니다."
"pytest.MonkeyPatch".msg = "monkeypatch대신 의존성 주입으로 테스트합니다."
"typing.cast".msg = "typing.cast대신 필요한 인터페이스를 Protocol로 정의하고, 외부 라이브러리 타입은 얇은 어댑터나 주입 가능한 팩토리 함수로 감쌉니다."
